style.css
/* ... */
img {
    max-width: 100%;
}

#backdrop {
    position: fixed;
    width: 0vw;
    height: 100vh;
    background-color: rgb(23 22 93 / 60%);
    z-index: 2;
    transition: 0.2s ease-in-out;
}

.container {
    max-width: 1280px;
    width: calc(100vw - 40px);
    margin-inline: auto;
}

section.hero-section {
    min-height: 100svh;
    height: fit-content;
    background-image: url(./images/hero-bg-clear.avif);
    background-size: cover;
    background-repeat: no-repeat;
    overflow: clip;
    position: relative;

    &::before {
        content: '';
        position: absolute;
        inset: 0;
        backdrop-filter: blur(36px);
    }

    .header {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding-top: 20px;
        animation: fade-in-top 0.5s ease-in-out 1;
        transition: 0.2s ease-in;
        position: relative;
        z-index: 4;


        img.logo {
            width: 200px;
            border-radius: 100vw;
            transition: 0.2s ease-in;
        }

        .hamburger {
            display: none;
            transition: 0.2s ease-in;

            &:hover {
                cursor: pointer;
            }

            .line {
                width: 40px;
                height: 5px;
                border-radius: 50px;
                background-color: #ecf0f1;
                display: block;
                margin: 6px auto;
                -webkit-transition: all 0.2s ease-in-out;
                -o-transition: all 0.2s ease-in-out;
                transition: all 0.2s ease-in-out;
            }

            &.is-active {
                .line {
                    &:nth-child(2) {
                        opacity: 0;
                    }
                }
            }

            &.is-active {
                .line {
                    &:nth-child(1) {
                        -webkit-transform: translateY(11px) rotate(45deg);
                        -ms-transform: translateY(11px) rotate(45deg);
                        -o-transform: translateY(11px) rotate(45deg);
                        transform: translateY(11px) rotate(45deg);
                    }
                }
            }

            &.is-active {
                .line {
                    &:nth-child(3) {
                        -webkit-transform: translateY(-11px) rotate(-45deg);
                        -ms-transform: translateY(-11px) rotate(-45deg);
                        -o-transform: translateY(-11px) rotate(-45deg);
                        transform: translateY(-11px) rotate(-45deg);
                    }
                }
            }
        }

        .navlist {
            position: static;
            list-style: none;
            display: flex;
            gap: 10px;

            li {
                padding: 8px 14px;
                background-color: rgba(255, 255, 255, 0.2);
                border-radius: 100vw;
                color: #fff;
                font-weight: 600;
                user-select: none;
                transition: 0.2s ease-in;

                &:hover {
                    color: #fcb866;
                    cursor: pointer;
                    box-shadow: 3px 4px;
                    transform: translateY(-4px);
                }
            }
        }

        &.scrolled {
            position: fixed;
            top: 0;
            max-width: 1280px;
            width: calc(100vw - 40px);
            margin-inline: auto;
            padding-top: 10px;
            z-index: 4;

            img.logo {
                width: 150px;
            }

            .navlist {
                li {
                    background-color: #1f0fa3;
                    border: 1px solid #fff;
                }
            }
        }
    }

    .content {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        align-items: center;
        min-height: calc(100vh - 113px);
        animation: scale-out 0.5s ease-in-out 1;
        position: relative;

        .left {
            color: #fff;

            h1 {
                width: 12ch;
                font-size: 64px;
                line-height: 1.05;
                margin-bottom: 32px;
            }

            .btn-div {
                display: flex;
                gap: 12px;

                .btn {
                    font-size: 18px;
                    padding: 12px 23px;
                    background-color: #D28320;
                    color: #fff;
                    border-radius: 12px;
                    user-select: none;
                    transition: 0.2s ease-in;

                    &:hover {
                        cursor: pointer;
                        transform: translateY(-3px);
                        box-shadow: 3px 3px #fff;
                    }
                }
            }
        }
    }
}
/* ... */

